# wavConverter

./: CMakeLists.txt  LICENSE  README.md
src/: wavTypeconvert.c
testapp/: testApp.c
